--- a/.github/workflows/sync_to_huggingface_hub.yml
+++ b/.github/workflows/sync_to_huggingface_hub.yml
@@ -14,14 +14,7 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-      - name: Configure Git
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-      - name: Push only modified files to hub
+      - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: |
-          git add -u  # Add only modified and deleted files
-          git commit -m "Update modified files"
-          git push https://bguratti:$HF_TOKEN@huggingface.co/spaces/bguratti/xray-analyzer main
+        run: git push https://bguratti:$HF_TOKEN@huggingface.co/spaces/bguratti/xray-analyzer main
