--- a/.github/workflows/sync_to_huggingface_hub.yml
+++ b/.github/workflows/sync_to_huggingface_hub.yml
@@ -3,26 +3,25 @@ on:
   push:
     branches: [main]
 
+  # to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch all history for proper comparisons
-          lfs: true  # Enable Git LFS if needed
-
+          fetch-depth: 0
+          lfs: true
       - name: Configure Git
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-
-      - name: Pull remote changes
-        run: git pull https://bguratti:$HF_TOKEN@huggingface.co/spaces/bguratti/xray-analyzer main --allow-unrelated-histories
-
-      - name: Push changes to hub
+      - name: Push only modified files to hub
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git add -A  # Stage all changes, including new files
-          git commit -m "Sync changes to Hugging Face Hub"
+          git add -u  # Add only modified and deleted files
+          git commit -m "Update modified files"
           git push https://bguratti:$HF_TOKEN@huggingface.co/spaces/bguratti/xray-analyzer main
