--- a/.github/workflows/sync_to_huggingface_hub.yml
+++ b/.github/workflows/sync_to_huggingface_hub.yml
@@ -18,3 +18,7 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: git push --force https://bguratti:$HF_TOKEN@huggingface.co/spaces/bguratti/xray-analyzer main
+
+     # Revert the changes made to .gitignore after the push (if needed)
+      - name: Revert changes to .gitignore
+        run: git checkout HEAD^ .gitignore
